static/scss/main/submission_list.scss
.submission_list {
    margin: 40px 0;
    width: 700px;

    $meta_margin: 140px;

    .submission_row {
        position: relative;
        margin-bottom: 40px;

        &.no_title {
            .submission_header {
                .submission_summary {
                    margin-top: 0;
                    margin-right: $meta_margin;
                }
            }
        }

        .submission_content {
            border: 1px solid $border_color;
            border-radius: 3px;
            margin-left: 98px;
        }

        .submission_header {
            position: relative;
            border-bottom: 1px solid $border_color;
            padding: 12px 20px 15px 20px;
            background: #F5F5F5;

            .submission_meta {
                position: absolute;
                top: 12px;
                right: 20px;
                font-size: 16px;
                color: #999;

                a {
                    color: #999;
                    text-decoration: none;

                    &:hover {
                        text-decoration: underline;
                    }
                }

                .edit_btn {
                    @include transition(all 0.2s ease);
                    display: inline-block;
                    vertical-align: top;
                    margin-left: 15px;
                    position: relative;
                    top: 2px;

                    &:hover {
                        color: $link_color;
                        text-decoration: none;
                    }
                }

            }

            .submission_title {
                margin-right: $meta_margin;
                line-height: 1.6;
                @include has_sub_link;

                a {
                    padding-bottom: 2px;
                }
            }

            .submission_summary {
                @include has_sub_link(#666);
                margin-top: 15px;
                color: #666;
            }

            .streak_title_group {
                white-space: nowrap;
            }
        }

        .submission_uploads {
            margin-bottom: 15px;

            img {
                max-width: 100%;
                margin: 0 auto;
                display: block;
                border: 0;
            }
        }

        .submission_upload, .submission_audio {
            display: block;
            margin: 15px 20px;
            height: 35px;
            line-height: 35px;

            button {
                margin-right: 20px;
            }

            .upload_stats {
                float: right;
                color: #999;
                font-size: 16px;
            }

            .upload_size {
                display: inline-block;
                color: #666;
                margin-left: 10px;

                &:before {
                    content: "("
                }

                &:after {
                    content: ")"
                }
            }
        }

        .submission_audio {
            position: relative;

            &.loading {
                .play_audio_btn {
                    @include opacity(0.5);
                }
            }

            &.loaded {
                .audio_progress_outer {
                    @include opacity(1);
                }
            }

            &.playing {
                .play_audio_btn {
                    .pause_icon {
                        @include opacity(1);
                    }

                    .play_icon {
                        @include opacity(0);
                    }
                }

                .audio_progress_inner {
                    @include transition(all 0.3s linear);
                }
            }

            .download_form {
                float: right;

                button {
                    margin-right: 0;
                }
            }

            .truncate_content {
                margin-left: 55px;
                margin-right: 140px;
                @include single_line;
                position: relative;
            }

            .audio_progress_outer {
                @include transition(opacity 0.2s ease);
                @include opacity(0);
                position: absolute;
                bottom: 0;
                left: 0;
                right: 0;
                height: 5px;
                background: lighten($border_color, 8%);

                .audio_progress_inner {
                    position: absolute;
                    top: 0;
                    left: 0;
                    bottom: 0;
                    width: 50%;
                    background: $border_color;
                }
            }

            .play_audio_btn {
                background: $blue;
                height: 35px;
                width: 35px;
                border-radius: 35px;
                color: white;
                cursor: pointer;
                float: left;
                position: relative;

                .play_icon, .pause_icon {
                    @include transition(opacity 0.2s ease);
                }

                .play_icon {
                    @include opacity(1);
                    position: absolute;
                    left: 11px;
                    top: 7px;
                    height: 20px;
                    width: 17px;
                }

                .pause_icon {
                    @include opacity(0);
                    position: absolute;

                    top: 8px;
                    left: 10px;
                    width: 15px;
                    height: 19px;
                }

                &:hover {
                    background: lighten($button_color, 5%);
                }
            }
        }

        .user_column {
            position: absolute;
            top: 6px;
            left: 0;
            width: 80px;
            text-align: center;
            word-wrap: break-word;

            .user_link {
                text-decoration: none;
            }

            img {
                width: 80px;
                height: 80px;
                display: block;
                border-radius: 40px;
                margin-bottom: 10px;
                border: 0;
            }

            .user_name {
                @include transition(all 0.1s ease);
                color: #666;
                text-decoration: none;
                border-bottom: 2px solid $link_color;

                &:hover {
                    color: $link_color;
                }
            }

        }

        .like_row {
            margin-top: 20px;

            &.has_likes {
                .like_count {
                    display: inline-block;
                }
            }

            a {
                text-decoration: none;
                font-size: 18px;
                color: #999;
                display: inline-block;
                vertical-align: top;
                line-height: 18px;

                &.liked {
                    color: $like_color;
                }
            }

            .like_count {
                @include transition(all 0.2s ease);
                color: #666;
                display: none;
                vertical-align: top;
                border-radius: 4px;
                padding: 0 4px;
                margin-left: 3px;
                line-height: 18px;

                &:hover {
                    color: $like_color;
                }
            }
        }


        h3, h4 {
            margin: 0;
        }

        .user_formatted {
            padding: 15px 20px;
        }

        .unit_number {
            font-size: 16px;
            display: inline-block;
            vertical-align: middle;
            font-weight: normal;
            background: $border_color;
            padding: 1px 6px;
            border-radius: 12px;
            margin-left: 2px;

            &:before {
                content: "#";
            }
        }

        .toggle_like_btn {
            &.liked {
                .on_like {
                    display: inline;
                }

                .on_no_like {
                    display: none;
                }
            }

            .on_like {
                display: none;
            }
        }

        .empty_message {
            padding: 15px 20px;
            margin: 0;
            color: #999;
        }

        .submission_footer {
            border-top: 1px solid $border_color;
            position: relative;
            overflow: hidden;

            .footer_inside {
                padding: 10px 20px;
                position: relative;
                float: left;
            }

            a {
                color: #666;
                &.loading {
                    @include opacity(0.3);
                }
            }

            .submission_tags {
                padding: 10px 20px;
                text-align: right;

                .submission_tag {
                    @include transition(all 0.2s ease);
                    display: inline-block;
                    font-size: 16px;
                    margin-left: 15px;
                    text-decoration: none;
                    color: #666;

                    &:hover {
                        color: $link_color;
                    }

                    &:before {
                        content: "#";
                    }
                }
            }

        }

        .comments_toggle_btn {
            &.locked {
                cursor: default;
                text-decoration: none;
            }
        }


    }

    .list_loader {
        background: red;
        text-align: center;
        background: #f5f5f5;
        padding: 10px 20px;
        border: 1px solid $border_color;
        color: darken(#F5F5F5, 20%);
        cursor: default;
    }


    .responsive & {
        @media (max-width: $site_width) {
            width: auto;
        }

        @media (max-width: $narrow_width) {
            width: auto;

            .submission_row {
                font-size: 16px;

                .submission_content {
                    margin-left: 0;
                }

                .submission_title {
                    margin-right: 0;
                }

                .submission_summary {
                    font-size: 16px;
                }

                .submission_meta {
                    font-size: 14px;
                    position: static;
                    margin-top: 15px;
                }

                .submission_header {
                    .streak_title_group {
                        white-space: normal;
                    }
                }


                .user_column {
                    width: auto;
                    text-align: left;
                    position: static;

                    img {
                        display: inline-block;
                        vertical-align: top;
                        width: 30px;
                        height: 30px;
                    }

                    .user_name {
                        display: inline-block;
                        vertical-align: top;
                        margin-left: 10px;
                        margin-top: 3px;
                        font-size: 18px;
                    }

                    .like_row {
                        display: inline-block;
                        vertical-align: top;
                        margin-top: 0;
                        margin-left: 10px;
                        margin-top: 9px;

                        a {
                            font-size: 16px;
                        }
                    }
                }

                .submission_upload {
                    @include single_line;
                    .upload_stats {
                        display: none;
                    }
                }
            }
        }
    }
}

